--- a/1-js/01-getting-started/4-devtools/bug.html
+++ b/1-js/01-getting-started/4-devtools/bug.html
@@ -7,9 +7,9 @@
 
 <body>
 
-  There is an error in the script on this page.
+  ഈ പേജിൽ എന്തോ error സംഭവിച്ചിട്ടുണ്ട്.....
   <script>
-    lalala
+    ലലല
   </script>
 
 </body>
