--- a/1-js/01-getting-started/4-devtools/bug.html
+++ b/1-js/01-getting-started/4-devtools/bug.html
@@ -7,7 +7,7 @@
 
 <body>
 
-  ഈ പേജിൽ എന്തോ error സംഭവിച്ചിട്ടുണ്ട്.....
+  ഈ പേജിൽ എന്തോ error സംഭവിച്ചിട്ടുണ്ട്....
   <script>
    ലാ ലാ ലാ
   </script>
